# easy-service

./: .gitignore  AGENTS.md  README.md  hatch_build.py  pyproject.toml
docs/: architecture.md  market-scan.md  roadmap.md  windows-process-lifecycle.md
src/easy_service/: __init__.py  __main__.py  _version.py  cli.py  launcher.py  models.py  utils.py
tests/: test_cli.py
