[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-service"
version = "0.1.0"
description = "Cross-platform, no-admin service management for user-level background commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
easy-service = "easy_service.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

