[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-service"
version = "0.1.0"
description = "Cross-platform, no-admin service management for user-level background commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
easy-service = "easy_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_service"]

